attached_assets/Pasted--Compiling-securechain-v1-0-0-home-runner-workspace-SecureChain-warning-unused-import-crate-1751920787369_1751920787371.txt
   Compiling securechain v1.0.0 (/home/runner/workspace/SecureChain)
warning: unused import: `crate::core::ai_assist::AIAssistant`
 --> src/cli/commands.rs:1:5
  |
1 | use crate::core::ai_assist::AIAssistant;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `Cli` and `execute_command`
 --> src/cli/mod.rs:8:20
  |
8 | pub use commands::{Cli, execute_command};
  |                    ^^^  ^^^^^^^^^^^^^^^

error[E0599]: no method named `generate_report` found for struct `ReportGenerator` in the current scope
   --> src/cli/commands.rs:185:35
    |
185 |     let report = report_generator.generate_report(&results, &output)?;
    |                                   ^^^^^^^^^^^^^^^
    |
   ::: src/report/generator.rs:91:1
    |
91  | pub struct ReportGenerator {
    | -------------------------- method `generate_report` not found for this struct
    |
help: there is a method `generate_markdown_report` with a similar name, but with different arguments
   --> src/report/generator.rs:706:5
    |
706 |     pub fn generate_markdown_report(&self, report: &ComprehensiveReport) -> Result<String...
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
   --> src/cli/commands.rs:211:65
    |
211 | ...cher.fetch_contracts(&network, &address, api_key.as_deref()).await?;
    |         ---------------                     ^^^^^^^^^^^^^^^^^^ expected `&str`, found `Option<&str>`
    |         |
    |         arguments to this method are incorrect
    |
    = note: expected reference `&str`
                    found enum `std::option::Option<&str>`
note: method defined here
   --> src/core/fetcher.rs:81:18
    |
81  |     pub async fn fetch_contracts(
    |                  ^^^^^^^^^^^^^^^
...
85  |         network: &str,
    |         -------------
help: consider using `Option::expect` to unwrap the `std::option::Option<&str>` value, panicking if the value is an `Option::None`
    |
211 |     let contracts = fetcher.fetch_contracts(&network, &address, api_key.as_deref().expect("REASON")).await?;
    |                                                                                   +++++++++++++++++

error[E0599]: no method named `generate_report` found for struct `ReportGenerator` in the current scope
   --> src/cli/commands.rs:287:35
    |
287 |     let report = report_generator.generate_report(&analysis_results, "m...
    |                                   ^^^^^^^^^^^^^^^
    |
   ::: src/report/generator.rs:91:1
    |
91  | pub struct ReportGenerator {
    | -------------------------- method `generate_report` not found for this struct
    |
help: there is a method `generate_markdown_report` with a similar name, but with different arguments
   --> src/report/generator.rs:706:5
    |
706 |     pub fn generate_markdown_report(&self, report: &ComprehensiveReport) -> Result<String...
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `config`
   --> src/cli/commands.rs:302:5
    |
302 |     config: Config,
    |     ^^^^^^ help: if this is intentional, prefix it with an underscore: `_config`
    |
    = note: `#[warn(unused_variables)]` on by default

Some errors have detailed explanations: E0308, E0599.
For more information about an error, try `rustc --explain E0308`.
warning: `securechain` (bin "securechain") generated 3 warnings
error: could not compile `securechain` (bin "securechain") due to 3 previous errors; 3 warnings emitted